deployment/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stella-ingress
spec:
  rules:
    - host: stella-pmakamwe.lab.sspcloud.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: stella-service
                port:
                  number: 80
